# w2-extractor

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
api/: __init__.py  exceptions.py  serializers.py  urls.py  views.py
api/services/: __init__.py  pdf_extractor.py  third_party_client.py
mock_api/: __init__.py  urls.py  views.py
tests/: test_api_views.py  test_pdf_extractor.py  test_third_party_client.py
w2_extractor/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
